apps/cli/crates/onequery-cli/src/snapshots/onequery__output__tests__render_error_with_known_code_adds_explain_hint_snapshot.snap
---
source: crates/onequery-cli/src/output.rs
expression: rendered
---
Error: source failed
Command: onequery source show warehouse
Stage: resolve_source
Why: no source named warehouse exists
Try:
  - run onequery source list
Explain: onequery explain source_not_found
