apps/cli/crates/onequery-cli/src/snapshots/onequery__output__tests__render_load_config_error_snapshot.snap
---
source: crates/onequery-cli/src/output.rs
expression: rendered
---
Error: failed to parse config file
Command: onequery auth whoami
Stage: load_config
Why: expected newline, found a string at line 2 column 14 (/Users/alice/.config/onequery/config.toml)
Try:
  - remove or fix /Users/alice/.config/onequery/config.toml

Think this is a bug? Report it with the error already filled in:
  <REPORT_URL>
