apps/cli/crates/onequery-cli/src/snapshots/onequery__output__tests__render_missing_env_directory_error_snapshot.snap
---
source: crates/onequery-cli/src/output.rs
expression: rendered
---
Error: failed to resolve config directory
Command: onequery auth whoami
Stage: load_config
Why: XDG_CONFIG_HOME points to /Users/alice/.config-missing, but that path does not exist
Try:
  - set XDG_CONFIG_HOME or HOME to a valid directory
