apps/cli/crates/onequery-cli/src/snapshots/onequery__output__tests__render_report_if_reproducible_error_snapshot.snap
---
source: crates/onequery-cli/src/output.rs
expression: rendered
---
Error: query failed
Command: onequery query exec --source warehouse --sql "<excerpt: select ...>"
Stage: execute_query
Why: warehouse execution unexpectedly failed
Request ID: req_query_failure
Try:
  - retry onequery query exec --source warehouse --sql "select 1"
Explain: onequery explain query_execution_failed

Report if reproducible: onequery doctor report --last
