apps/cli/crates/onequery-cli/src/snapshots/onequery__output__tests__render_reportable_error_snapshot.snap
---
source: crates/onequery-cli/src/output.rs
expression: rendered
---
Error: query failed
Command: onequery query exec --source warehouse --sql "<excerpt: select ...>"
Stage: execute_query
Why: failed to decode query response
Request ID: req_decode
Try:
  - retry onequery query exec --source warehouse --sql "select 1"
Explain: onequery explain decode_error

Report: onequery doctor report --last
